<?xml version="1.0"?>
<package format="2">
  <name>ros_flir_spinnaker</name>
  <version>0.0.0</version>
  <description>ROS camera driver for FLIR Thermal cameras supported by Spinnaker SDK</description>
  <license>TODO</license>

  <maintainer email="parham.nooralishahi@gmail.com">Parham Nooralishahi</maintainer>
  <author email="parham.nooralishahi@gmail.com">Parham Nooralishahi</author>

  <url type="website">https://www.ulaval.ca/</url>
  <url type="website">https://www.linkedin.com/in/parham-nooralishahi/</url>
  <url type="repository">https://github.com/parham/ros_flir_spinnaker.git</url>

  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>image_proc</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>  </export>
</package>
